--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,11 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date: "%Y年%m月%d日" }}</span>
+  <span class="post-date">{{ page.date | date: "%Y年%m月%d日 %H时%M分" }}</span>
   {{ content }}
+  <span class="post-tags">标签: {% for tag in page.tags %}{{tag}}{% if forloop.rindex != 1 %} | {% else %}{% endif %}{% endfor %}</span>
 </div>
+
 {% if site.comments %}
 <div class="comments">
     {% include comments.html %}
@@ -21,8 +23,8 @@ layout: default
         <h3>
           <a href="{{ site.baseurl }}{{ post.url }}">
             {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
           </a>
+          <small>{{ post.date | date: "%Y年%m月%d日 %H时%M分" }}</small>
         </h3>
       </li>
     {% endfor %}
