--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -309,7 +309,7 @@ a.sidebar-nav-item:focus {
 
 .page,
 .post {
-  margin-bottom: 4em;
+  margin-bottom: 3em;
 }
 
 /* Blog post or page title */
@@ -329,6 +329,14 @@ a.sidebar-nav-item:focus {
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
+}
+
+.post-tags {
+  display: block;
+  margin-top: 1rem;
+  margin-bottom: -.5rem;
+  color: #9a9a9a;
+  font-size: 0.8em;
 }
 
 /* Related posts */
@@ -364,7 +372,7 @@ a.sidebar-nav-item:focus {
  * there are no more previous or next posts to show.
  */
 
-.pagination {
+.pagination-lanyon {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
