[add] a search button.

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -12,3 +12,6 @@
 <a id="search-close" href="#"><img src="{{ site.baseurl }}/public/close-white.png"></a>
 </div>
 </div>
+<div style="width:50px;position:fixed; right: 2em; bottom: 2em;">
+<a id="search-open" href="#"><img src="{{ site.baseurl }}/public/search-blue.png"></a>
+</div>
