[update] search panel css on mobile phones.

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -13,5 +13,5 @@
 </div>
 </div>
 <div style="width:50px;position:fixed; right: 2em; bottom: 2em;">
-<a id="search-open" href="#"><img src="{{ site.baseurl }}/public/search-blue.png"></a>
+<a title="双击Ctrl快速打开搜索框" id="search-open" href="#"><img src="{{ site.baseurl }}/public/search-black.png"></a>
 </div>
