--- a/public/css/mine.css
+++ b/public/css/mine.css
@@ -35,6 +35,9 @@
 	margin: 0 15%;
 	font-size: 20px;
 	float: none;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .search-close {
@@ -42,4 +45,23 @@
 	width: 50px;
 	top: 2em;
 	right: 2em;
+}
+
+@media screen and (min-width: 768px)
+{
+}
+
+@media screen and (max-width: 767px)
+{
+.search-content input {
+   width: 95%;
+   margin: 0 2%;
+   top: 180px;
+   font-size: 14px;
+}
+.search-content ul {
+	width: 95%;
+	margin: 0 2%;
+	font-size: 14px;
+}
 }
