--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,17 +1,20 @@
+<div id="search">
 <div id="search-panel" class="search-panel">
-<div class="search-content">
-<input id="search-keywords" type="text" class="form-control" placeholder="搜索范围: 文章标题 日期(格式:2017-01-01) 标签">
-<ul class="typeahead dropdown-menu" role="list">
-  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
-  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
-  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
-</ul>
+	<div class="search-input">
+		<span class="glyphicon glyphicon-search icon"></span>
+		<input id="search-keywords" type="text" class="form-control" placeholder="搜索范围: 文章标题 日期 标签">
+		<ul class="typeahead dropdown-menu" role="list">
+			<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+			<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+			<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+			<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+		</ul>
+	</div>
+	<div class="search-close">
+		<a id="search-close" href="#"><img src="{{ site.baseurl }}/public/close-white.png"></a>
+	</div>
 </div>
-<div class="search-close">
-<a id="search-close" href="#"><img src="{{ site.baseurl }}/public/close-white.png"></a>
+<div class="search-button">
+	<a title="双击Ctrl快速打开搜索框" id="search-open"><img src="{{ site.baseurl }}/public/search-black.png"></a>
 </div>
-</div>
-<div style="width:50px;position:fixed; right: 2em; bottom: 2em;">
-<a title="双击Ctrl快速打开搜索框" id="search-open" href="#"><img src="{{ site.baseurl }}/public/search-black.png"></a>
 </div>
